# smugglr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.example.toml  install.sh
.github/ISSUE_TEMPLATE/: implementation-task.md
.github/workflows/: ci.yml  release.yml
crates/smuggler/: Cargo.toml
crates/smuggler-core/: Cargo.toml
crates/smuggler-core/src/: batch.rs  broadcast.rs  config.rs  daemon.rs  lib.rs  local.rs  plugin.rs  remote.rs  stash.rs  sync.rs  table.rs
crates/smuggler-plugin-sdk/: Cargo.toml
crates/smuggler-plugin-sdk/src/: lib.rs
crates/smuggler/src/: broadcast.rs  main.rs  output.rs  watch.rs
crates/smugglr/: Cargo.toml
crates/smugglr-core/: Cargo.toml
crates/smugglr-core/src/: broadcast.rs  config.rs  daemon.rs  datasource.rs  diff.rs  error.rs  lib.rs  local.rs  plugin.rs  profile.rs  remote.rs  snapshot.rs  stash.rs
crates/smugglr-plugin-sdk/: Cargo.toml
crates/smugglr-plugin-sdk/src/: lib.rs
crates/smugglr-wasm/: Cargo.toml
crates/smugglr-wasm/src/: fetch_adapter.rs  lib.rs  local_adapter.rs
crates/smugglr/src/: broadcast.rs  main.rs  output.rs  watch.rs
docs/examples/: .gitignore  README.md
docs/examples/browser-idb-turso/: .env.example  README.md  index.html  main.ts  package.json  worker.ts
docs/examples/browser-opfs-turso/: README.md  index.html  main.ts  package.json  vite.config.ts  worker.ts
docs/examples/cli-d1-sync/: README.md  config.example.toml  schema.sql
docs/examples/cli-lan-broadcast/: README.md  config.example.toml
docs/examples/node-auto-sync/: .env.example  README.md  auto-sync.mjs  package.json
docs/examples/node-server-to-d1/: .env.example  README.md  package.json  push.mjs
docs/examples/rust-custom-datasource/: Cargo.toml  README.md
docs/examples/rust-custom-datasource/src/: main.rs
docs/examples/rust-tokio-service/: Cargo.toml  README.md
docs/examples/rust-tokio-service/src/: main.rs
docs/plans/: broadcast-tcp-encryption.md
plugins/smuggler-http-sql/: Cargo.toml
plugins/smuggler-http-sql/src/: adapter.rs  main.rs  profile.rs
plugins/smugglr-http-sql/: Cargo.toml
plugins/smugglr-http-sql/src/: adapter.rs  main.rs  profile.rs
src/: batch.rs  broadcast.rs  config.rs  datasource.rs  diff.rs  error.rs  local.rs  main.rs  output.rs  remote.rs  stash.rs  sync.rs  table.rs  timestamp.rs  turso.rs  watch.rs
templates/do-bridge/: README.md  package.json  wrangler.toml
templates/do-bridge/src/: index.ts
