[workspace]
members = ["crates/smuggler-core", "crates/smuggler", "crates/smuggler-plugin-sdk"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/rafters-studio/smuggler"
authors = ["Sean Silvius"]

[profile.release]
lto = true
codegen-units = 1
strip = true
