[workspace]
members = [
    "crates/smugglr-core",
    "crates/smugglr",
    "crates/smugglr-plugin-sdk",
    "crates/smugglr-wasm",
    "plugins/smugglr-http-sql",
]
default-members = [
    "crates/smugglr-core",
    "crates/smugglr",
    "crates/smugglr-plugin-sdk",
    "plugins/smugglr-http-sql",
]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/rafters-studio/smugglr"
homepage = "https://smugglr.dev"
documentation = "https://smugglr.dev/docs"
authors = ["Sean Silvius"]

[profile.release]
lto = true
codegen-units = 1
strip = true
