[package]
name = "smugglr-core"
description = "SQLite replication engine -- content-hash diffing, delta sync, any target"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["native"]
native = [
    "dep:rusqlite",
    "dep:reqwest",
    "dep:tokio",
    "dep:object_store",
    "dep:url",
    "dep:tempfile",
    "dep:chacha20poly1305",
    "dep:rand",
    "dep:libc",
]

[dependencies]
# Serialization (always needed)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config (always needed)
toml = "0.8"

# Error handling (always needed)
thiserror = "2"
anyhow = "1"

# Hashing for change detection (always needed, WASM-compatible)
sha2 = "0.10"
hex = "0.4"

# Logging (always needed)
tracing = "0.1"

# -- Native-only dependencies --

# SQLite
rusqlite = { version = "0.34", features = ["bundled"], optional = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"], optional = true }

# Async runtime
tokio = { version = "1", features = ["full"], optional = true }

# Object storage (S3, R2, GCS, local filesystem)
object_store = { version = "0.12", features = ["aws"], optional = true }
url = { version = "2", optional = true }
tempfile = { version = "3", optional = true }

# Encryption (broadcast packets)
chacha20poly1305 = { version = "0.5", optional = true }
rand = { version = "0.9", optional = true }

# Unix process checking (PID lock)
libc = { version = "0.2", optional = true }
