[package]
name = "smugglr"
description = "Smuggle data between SQLite and Cloudflare D1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/rafters-studio/smugglr"
documentation = "https://github.com/rafters-studio/smugglr#readme"
readme = "../../README.md"
keywords = ["cloudflare", "d1", "sqlite", "sync", "database"]
categories = ["command-line-utilities", "database"]
exclude = [
    "config.toml",
    "failed_rows.json",
]

[[bin]]
name = "smugglr"
path = "src/main.rs"

[dependencies]
smugglr-core = { path = "../smugglr-core" }

# CLI
clap = { version = "4", features = ["derive"] }

# Progress display
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (needed for JSON output in CLI)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
