[package]
name = "smugglr"
description = "Content-hashed delta sync for SQLite -- push, pull, and bidirectional sync to any pluggable target"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["sqlite", "sync", "replication", "delta", "cli"]
categories = ["command-line-utilities", "database"]
exclude = [
    "config.toml",
    "failed_rows.json",
]

[[bin]]
name = "smugglr"
path = "src/main.rs"

[dependencies]
smugglr-core = { path = "../smugglr-core", version = "0.3.0" }

# CLI
clap = { version = "4", features = ["derive"] }

# Progress display
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (needed for JSON output in CLI)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
