[package]
name = "smugglr-http-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "HTTP SQL adapter plugin for smugglr -- supports Turso, rqlite, SQLite Cloud, and custom endpoints"
readme = "../../README.md"
keywords = ["smugglr", "plugin", "turso", "rqlite", "d1"]
categories = ["database"]

[[bin]]
name = "smugglr-http-sql"
path = "src/main.rs"

[dependencies]
smugglr-core = { path = "../../crates/smugglr-core", version = "0.3.0", default-features = false }
smugglr-plugin-sdk = { path = "../../crates/smugglr-plugin-sdk", version = "0.3.0" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
