[package]
name = "smugglr-example-custom-datasource"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
smugglr-core = { version = "0.3", path = "../../../crates/smugglr-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
